Tue Sep 16 03:53:07 2008  Minero Aoki  <aamine@loveruby.net>

	* install.sh: check if jar and libcbc are built.

	* install.sh: fix syntax error.

Tue Sep 16 03:42:43 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: reject statements
	  whose type is struct/union/allocated array.

	* test: test invalid statement expression.

Tue Sep 16 03:23:49 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm: toString -> toSource.

Tue Sep 16 03:12:41 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/Literal.java: does not inherit
	  AsmOperand.

	* net/loveruby/cflat/asm/Assembler.java: do not use Literals in
	  instruction operand.

	* net/loveruby/cflat/asm/ImmediateValue.java: accept only
	  Literals.

Tue Sep 16 02:53:07 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/Symbol.java -> LabelRef.java

	* net/loveruby/cflat/asm/*.java: Symbol -> LabelRef.

Tue Sep 16 02:49:21 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/AsmEntity.java -> AsmOperand.java

	* net/loveruby/cflat/*/*.java: AsmEntity -> AsmOperand.

Tue Sep 16 02:37:46 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/Address.java -> MemoryReference.java

	* net/loveruby/cflat/asm/DirectAddress.java ->
	  DirectMemoryReference.java

	* net/loveruby/cflat/asm/IndirectAddress.java ->
	  IndirectMemoryReference.java

	* net/loveruby/cflat/compiler/CodeGenerator.java: Address ->
	  MemoryReference.

	* net/loveruby/cflat/asm/AsmEntity.java: ditto.

	* net/loveruby/cflat/asm/AbsoluteAddress.java: ditto.

	* net/loveruby/cflat/ast/Entity.java: ditto.

	* net/loveruby/cflat/ast/Variable.java: ditto.

	* net/loveruby/cflat/ast/DefinedVariable.java: ditto.

	* net/loveruby/cflat/ast/UndefinedVariable.java: ditto.

	* net/loveruby/cflat/ast/Function.java: ditto.

	* net/loveruby/cflat/ast/ExprNode.java: ditto.

	* net/loveruby/cflat/ast/VariableNode.java: ditto.
