@@ -2,7 +2,7 @@ package net.loveruby.cflat.ast;
 import net.loveruby.cflat.type.*;
 import java.util.*;
 
-public class StructNode extends ComplexTypeDefinition {
+public class StructNode extends CompositeTypeDefinition {
     public StructNode(Location loc, TypeRef ref, String name, List membs) {
         super(loc, ref, name, membs);
     }
