@@ -1,3 +1,10 @@
+Sat Sep 20 19:30:48 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/type/ComplexType.java -> CompositeType.java
+
+	* net/loveruby/cflat/ast/ComplexTypeDefinition.java ->
+	  CompositeTypeDefinition.java
+
 Tue Sep 16 03:53:07 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* install.sh: check if jar and libcbc are built.
